@@ -68,8 +68,10 @@
 	wig&pen (aka Format: 2.0) on build:
 	Use .orig.tar.(bz2|lzma) if they are available
 	and no .gz can be found. Also let the user specify
-	via -C(gz|bz2|lzma) how files that need to be
-	generated should be compressed.
+	via -Z(gz|bz2|lzma) how files that need to be
+	generated should be compressed. -z([1-9]|best|fast)
+	can be used to specify the compression level
+	to use.
 
 2007-09-29  Frank Lichtenheld  <djpig@debian.org>
 
